my assign update

--- a/assignment/index.html
+++ b/assignment/index.html
@@ -1,10 +1,43 @@
-<!DOCTYPE html>
 <html>
 <head>
-	<title>guru</title>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>2nd week assignment (guru)</title>
+	<link rel="stylesheet"  href="style.css">
 </head>
 <body>
-	<p> my test</p>
+	<div class='container'>
+		<h2 class='header-title'>CHOCO-MOCO   </h2>
+		<div class="row">
+			<div class="card col-lg-4 col-md-6 col-sm-12">
+				<div class='card-body grey'>
+					<p class="tag pink">FRESH INGREDIENTS</p>
+					<p class="content">
+						We use fresh ingredients for flavoring our chocolates instead of the essence as the taste that a fresh orange can deliver no alternative can satisfy. For fruit-filled chocolates, we add fruit pulp that enhances the chocolaty experience.
+					<p>					
+				</div>
+			</div>
+			<div class="card col-lg-4 col-md-6 col-sm-12">
+				<div class="card-body black">
+					<p class="tag red">GREAT TASTE</p>
+					<p class="content black-text">
+						Chocolates all over the world taste more over the same, only an expert can explain the difference in texture. But what gives our product premium taste is the amount of nuts that we use in our creation. Unlike other companies, we use 20-25% of roasted cashews that makes it taste heavenly. We also add Almond & Raisins on request. We are always open to customization as your satisfaction is our first priority
+					</p>					
+				</div>
+			</div>
+			<div class="card col-lg-4 col-md-12 col-sm-12">
+				<div class='card-body dark-blue dark-blue-border'>
+					<p class="tag gold dark-blue-border">WHY CHOOSE CHOCO-MOCO?</p>
+					<p class="content dark-blue-text">
+						Each and everything with us is purely home made .The most important thing is you can customise according to your preferrences
 
+
+
+
+					</p>					
+				</div>
+			</div>
+		</div>
+	</div>
 </body>
 </html>
