--- a/assignment-0(week-3)/index.html
+++ b/assignment-0(week-3)/index.html
@@ -12,11 +12,13 @@
   </head>
 <body>
   <header>
-    <nav id="header-nav" class="navbar navbar-default">
+    <nav id="header-nav" class="navbar navbar-default navbar-expand-lg navbar-light ">
       <div class="container">
         <div class="navbar-header">
-          <a href="index.html" class="pull-left visible-md visible-lg">
-            <div id="logo-img"></div>
+          <a href="index.html" class="pull-left d-none d-md-block d-lg-block d-xl-block">
+
+
+            <div id="logo-img" alt="logo-img"></div>
           </a>
 
           <div class="navbar-brand">
@@ -26,8 +28,16 @@
               <span>Kosher Certified</span>
             </p>
           </div>
-
-
+           
+   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+       <span class="navbar-toggler-icon"></span>
+                  <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+    </button>
+    
+  </div>
+</nav>
         </div>
       </div>
     </nav>
