--- a/assignment-2(week-3)/index.html
+++ b/assignment-2(week-3)/index.html
@@ -3,29 +3,28 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  
   <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/styles.1.css">
   
-  <title>Module 3 Solution</title>
+                 <title>Module 3 Solution</title>
 </head>
 <body>
     <header class="nav-header">
-    <nav id="header-nav" class="navbar navbar-default">
+    <nav id="header-nav" class="navbar navbar-default navbar-expand-lg navbar-light">
       <div class="container">
         <div class="navbar-header">
           <div class="navbar-brand">
             <p class="nav-brand">Food, LLC</p>
           </div>
 
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#collapsable-nav" aria-expanded="true">
-            <span class="sr-only">Toggle navigation</span>
+           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+       <span class="navbar-toggler-icon"></span>
+                  <span class="icon-bar"></span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
+    </button>
         </div>
-        
+      
         <div id="collapsable-nav" class="collapse navbar-collapse">
            <ul id="nav-list" class="nav navbar-nav navbar-right visible-xs">
             <li class="text-center">
@@ -38,6 +37,7 @@
             </li>
             <li class="text-center sushi-item">
               <a href="#sushi-div"><p class="item">Sushi</p></a>
+              <hr class="visible-xs">
             </li>
           </ul> 
         </div>
