--- a/assignment-3(week-4)/index.html
+++ b/assignment-3(week-4)/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="eng">
 <head>
   <meta charset="utf-8">
-  <title>Module 4 assignment </title>
+  <title>Module 4  </title>
   <script>
     var names = []; // DO NOT REMOVE
   </script>
@@ -11,7 +11,7 @@
   <script src="script.js"></script>
 </head>
 <body>
-  <h1>4th- week assignment</h1>
+  <h1>4th- week assign</h1>
   <h2> right click on the screen and inspect</h2>
 </body>
 </html>
