--- a/assignment-3(week-4)/index.html
+++ b/assignment-3(week-4)/index.html
@@ -1,17 +1,15 @@
+
 <!DOCTYPE html>
-<html lang="eng">
+<html>
 <head>
   <meta charset="utf-8">
-  <title>Module 4  </title>
-  <script>
-    var names = []; // DO NOT REMOVE
-  </script>
+  <title>Module 4 Solution Starter</title>
   <script src="SpeakHello.js"></script>
-  <script src="SpeakGoodbye.js"></script>
+  <script src="SpeakGoodBye.js"></script>
   <script src="script.js"></script>
 </head>
 <body>
-  <h1>4th- week assign</h1>
-  <h2> right click on the screen and inspect</h2>
+  <h1>Module 4 Solution Starter</h1>
+  <p>open console to see the output</p>
 </body>
 </html>
