--- a/assignment-3(week-4)/index.html
+++ b/assignment-3(week-4)/index.html
@@ -6,11 +6,11 @@
   <script>
     var names = [];
   </script>
-  <script src="SpeakHello.js"></script>
-  <script src="SpeakGoodBye.js"></script>
-  <script src="script.js"></script>
+  <script type="text/javascript" ssrc="SpeakHello.js"></script>
+  <script type="text/javascript" src="SpeakGoodBye.js"></script>
+  <script type="text/javascript" src="script.js"></script>
 </head>
 <body>
-  <h1>Module 4 Solution</h1>
+  <h1>Module 4 Solution</h1> type="text/javascript"
 </body>
 </html>
