--- a/assignment-3(week-4)/index.html
+++ b/assignment-3(week-4)/index.html
@@ -2,15 +2,11 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Module 4 Solution</title>
-  <script>
-    var names = [];
-  </script>
-  <script type="text/javascript" ssrc="SpeakHello.js"></script>
-  <script type="text/javascript" src="SpeakGoodBye.js"></script>
-  <script type="text/javascript" src="script.js"></script>
+  <title>Module 4 Solution Starter</title>
+  <script src="script.js"></script>
 </head>
 <body>
-  <h1>Module 4 Solution</h1> type="text/javascript"
+  <h1>Module 4 Solution </h1>
+  <p> Open the console to see the output</p>
 </body>
 </html>
